<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MVP.views.ui.fragments.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/grey_font"
                android:text="@string/mon_profil"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_font"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVRegular
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_email"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVLight
                android:layout_width="match_parent"
                android:id="@+id/edit_profil"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="14sp"
                android:textColor="@color/colorGold"
                android:text="@string/edit_profil"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/grey_font"
                android:text="@string/notifs"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_font"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVRegular
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/edit_notif"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_Notifs"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/checkbox_notification"
                    android:buttonTint="@color/colorGold"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </LinearLayout>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/grey_font"
                android:text="@string/mentions_legales"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_font"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVRegular
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/politique_conf"
                android:textColor="@color/colorBlack"
                android:id="@+id/politique_conf"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVRegular
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/condition_utilisation"
                android:textColor="@color/colorBlack"
                android:id="@+id/condition_utilisation"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVRegular
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/app_version"
                android:textColor="@color/colorBlack"
                android:id="@+id/version"/>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_font"/>
            <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
                android:layout_width="match_parent"
                android:id="@+id/deconnexion"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorGold"
                android:text="@string/deconnexion"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>