
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context=".MVP.views.ui.fragments.DevisFragment">

<LinearLayout
    android:id="@+id/devis_label"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">
    <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:text="@string/devis_label"
        android:layout_gravity="center"
        android:gravity="start" />
</LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:visibility="gone"
        android:id="@+id/loader"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/text_no_devis_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/no_devis"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>
    <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"

        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/no_programs"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_no_connexion"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_connexion.json"
            app:lottie_loop="true" />
        <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVLight
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:textColor="@color/colorBlack"
            android:text="@string/no_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
<LinearLayout
    android:id="@+id/rv_devis_container"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="6"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view_devis"/>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
<LinearLayout
    android:id="@+id/devis_add_button"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/button_new_devis"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/button_appel_intervention"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/new_devis"/>
    </LinearLayout>
    <ImageView

        android:elevation="10dp"
        android:backgroundTint="@android:color/white"
        app:borderWidth="0dp"
        app:maxImageSize="35dp"
        android:id="@+id/fab_intervention"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/message_icon"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp" />
</LinearLayout>



</LinearLayout>