<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".MVP.views.ui.fragments.ArticlePerCategorieDetailsFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_centerInParent="true"
                android:id="@+id/ll_program_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:background="@color/grey_font"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="5dp">
                    <ImageView

                        android:id="@+id/image_article"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVBold
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/label_article"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/titre_rec"/>
                    <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVRegular
                        android:id="@+id/date_article"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_rec"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_compte_rendu">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <com.touchlink.medespoir.MVP.views.ui.customviews.MedEspoirTVLight
                        android:id="@+id/desc_article"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/loreomipsuim"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ImageView
        android:elevation="10dp"
        android:backgroundTint="@android:color/white"
        app:borderWidth="0dp"
        app:maxImageSize="35dp"
        android:id="@+id/fab"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/message_icon"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp" />
</RelativeLayout>

</FrameLayout>